# ORE-v3

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build
lib/Nuklear-4.12.8/: nuklear_glfw_gl4.h
lib/fast_obj/: fast_obj.h
lib/stb_image/: stb_image.h
src/ore/: Ore.cpp  Ore.h
src/ore/animation/: BasicAnimation.cpp  BasicAnimation.h  Transition.h  TransitionType.h
src/ore/core/: Constants.h  GameState.h
src/ore/core/window/: Window.cpp  Window.h  WindowSettings.h
src/ore/gameObjects/: GameObject.h
src/ore/gameObjects/input/: BuiltinEngineKeybinds.cpp  BuiltinEngineKeybinds.h  FreePerspectiveCameraController.cpp  FreePerspectiveCameraController.h  NodeController.cpp  NodeController.h
src/ore/geom/: RelativeTransformation.h  int2.h  vec2.h  vec3.h  vec4.h
src/ore/gl/: GLError.h  RenderPass.cpp  RenderState.h
src/ore/gl/camera/: TripodCameraTransform.cpp  TripodCameraTransform.h
src/ore/gl/font/: Font.cpp  Font.h  FontCharacter.h
src/ore/gl/frameBuffer/: FrameBuffer.cpp  FrameBuffer.h  OffscreenRenderBuffer.cpp  OffscreenRenderBuffer.h
src/ore/gl/lighting/: Light.h  LightType.h
src/ore/gl/render/: RenderMode.h  RenderPass.cpp  RenderPass.h  RenderState.cpp  RenderState.h
src/ore/gl/shader/: ShaderLoader.cpp  ShaderLoader.h  ShaderSource.h  ShaderUniformIndex.h  ShadingConfiguration.h
src/ore/gl/shapes/: PlaneGenerator.cpp  PlaneGenerator.h  PrimitiveGenerator.cpp  PrimitiveGenerator.h
src/ore/gl/texture/: TextureGenerator.cpp  TextureGenerator.h
src/ore/gl/vao/: GeometryBuffer.cpp  GeometryBuffer.h  GeometryBufferGenerator.cpp  GeometryBufferGenerator.h
src/ore/physics/: PhysicsHandle.h  SimulatedPhysicsObject.h  SimulationType.h
src/ore/resouces/: ResourceCache.cpp  ResourceCache.h
src/ore/resouces/loadScreen/: DefaultLoadScreenRenderer.cpp  LoadScreenRenderer.cpp  LoadScreenRenderer.h
src/ore/resources/: ResourceCache.cpp  ResourceCache.h  ResourceContainer.cpp  ResourceContainer.h  ResourceLoadPriority.h  defaultResources.cpp  defaultResources.h
src/ore/resources/loadScreen/: DefaultLoadScreenRenderer.h  LoadScreenRenderer.h
src/ore/resources/loaders/: shader.hpp
src/ore/resources/resourceTypes/: AnimationResource.cpp  AnimationResource.h  FontResource.cpp  FontResource.h  LXFMLResource.cpp  LXFMLResource.h  MeshResource.cpp  MeshResource.h  ResourceType.cpp  ResourceType.h  ShaderResource.cpp  ShaderResource.h  SoundResource.cpp  SoundResource.h  TextureResource.cpp  TextureResource.h  VideoResource.cpp  VideoResource.h
src/ore/resources/resourceTypes/material/: Material.cpp  Material.h
src/ore/resources/resourceTypes/mesh/: Mesh.h  MeshGeometry.h  MeshMaterials.h  MeshPart.h
src/ore/resources/resourceTypes/shader/: Shader.cpp  Shader.h
src/ore/resources/resourceTypes/texture/: ShadowTexture.cpp  ShadowTexture.h  Texture.h
src/ore/resources/resourceTypes/video/: VideoStream.cpp  VideoStream.h
src/ore/sceneGraph/: ContainerNode.cpp  ContainerNode.h  Scene.h  SceneNode.cpp  SceneNode.h
src/ore/sceneGraph/nodes/: ContainerNode.cpp  ContainerNode.h  CoordinateNode.cpp  CoordinateNode.h  GeometryNode.cpp  GeometryNode.h  LightNode.cpp  LightNode.h  MaterialNode.cpp  MaterialNode.h  MeshNode.cpp  MeshNode.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PositionNode.cpp  PositionNode.h  ShaderNode.cpp  ShaderNode.h  ShadowNode.cpp  ShadowNode.h  TextNode.cpp  TextNode.h  VideoTextureNode.cpp  VideoTextureNode.h
src/ore/sceneGraph/nodes/shadow/: ShadowNode.cpp  ShadowNode.h
src/ore/services/: AIService.cpp  AIService.h  AnimationService.cpp  AnimationService.h  ConfigService.cpp  ConfigService.h  InputService.cpp  InputService.h  PhysicsService.cpp  PhysicsService.h  SoundService.cpp  SoundService.h
src/ore/services/input/: InputEventTriggerType.cpp  InputEventTriggerType.h  InputMappingType.h  InputType.cpp  InputType.h
src/ore/ui/: Font.h  FontCache.cpp  FontCache.h  GUIRootNode.cpp  GUIRootNode.h  GUIWindow.cpp  GUIWindow.h  imgui_configured.h  nuklear_configured.h  nuklear_implementation.cpp
src/ore/utilities/: Logger.cpp  Logger.h  SceneGraphPrinter.cpp  SceneGraphPrinter.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  Threadpool.h  filesystem.h
src/ore/world/: Actors.cpp  Actors.h  GameWorld.cpp  GameWorld.h
subprojects/: glfw.wrap  glm.wrap  jolt.wrap  miniaudio.wrap  nlohmann_json.wrap
